...
    <string name="home_title">Home</string>
    <string name="report_title">Report</string>
    <string name="my_profile_title">My Profile</string>
    <string name="account_and_security_title">Account and Security</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="age_label">Age</string>
    <string name="weight_label">Weight</string>
    <string name="height_label">Height</string>
    <string name="gender_label">Gender</string>
    <string name="save">Save</string>
...
    <string name="or">Or</string>
    <string name="email_address_placeholder">What\'s your email address?</string>
    <string name="email_address_label">Email Address</string>
    <string name="email_address_error_text">Please enter a valid email address</string>
    <string name="supporting_text_required">*required</string>
...
    <string name="new_password_placeholder">Create your new password</string>
    <string name="password_error_text">Password must be at least 8 characters long and include a mix of lowercase, uppercase, numbers, special characters, and no spaces</string>
    <string name="password_label">Password</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="you_ve_been_missed">You\'ve been missed 🤗</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="join_us_today">🌟 Join Us! 🌟</string>
    <string name="confirmation_password_placeholder">Re-enter your password</string>
    <string name="confirmation_password_error_text">Please confirm your password correctly</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in_here">Sign in here</string>
...
    <string name="reset_password_message">Forgot your password? No worries,\nwe\'ll send you reset instructions</string>
    <string name="new_password_message">Enter your new password</string>
    <string name="add_my_profile_label">Let\'s make\nhealthy eating\nfun and easy 🥗💪</string>
    <string name="username_placeholder">Create your username</string>
    <string name="username_label">Username</string>
    <string name="username_error_text">Please enter a username between 6 and 20 characters without spaces or special characters like @, $, etc.</string>
    <string name="age_placeholder">What\'s your age?</string>
...
    <string name="trailing_text_cm">cm</string>
    <string name="goal_label">Goal</string>
    <string name="target_weight_label">Target Weight</string>
    <string name="target_weight_placeholder">What\'s your target weight?</string>
    <string name="target_weight_error_text">Target weight must be a number greater than 0</string>
    <string name="activity_level_label">Activity Level</string>
    <string name="build_profile">Build Profile</string>
    <string name="confirmation_password_label">Confirm Password</string>
    <string name="verify_email">Verify Email</string>
    <string name="terms_of_use_label_button">By clicking get started or sign in, you agree to the</string>
...
    <string name="your_diet_s_best_ally">" Your diet\'s best friend 🌟"</string>
    <string name="landing_message">Check out your Food Diary:\nTrack your meals! 🥘🍱</string>
    <string name="get_started">Get Started</string>
    <string name="failed_to_took_picture">Failed to take picture</string>
    <string-array name="goal">
...
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="diary_display">Check out your Food Diary:\nTrack your meals! 🥘🍱</string>
    <string name="empty_content_label">No food diary entries yet</string>
    <string name="empty_content_search">The food you\'re looking for can\'t be found</string>
...
    <string name="wheel_max_label">%1$s/\nMax %2$s</string>
    <string name="waist_circumference_placeholder">Enter your waist circumference</string>
    <string name="waist_circumference_label">Waist Circumference</string>
    <string name="food_diary">Food Diary</string>
    <string name="progress">✦ Progress</string>
...
    <string name="dev_mode_dismiss_message">Grant notification permissions through your Android settings</string>
    <string name="dev_mode_body">To access the dev mode menu, please grant notification access</string>
    <string name="allow">Allow</string>
    <string name="reset">Reset</string>
    <string name="weight_legend">Weight (kg)</string>
...
    <string name="empty_data">No data to display</string>
    <string name="verify_code_label">"Enter the 6-digit code sent to "</string>
    <string name="successfully_signed_up">You successfully signed up</string>
    <string name="success">Success</string>
    <string name="check_your_mailbox">Check your email inbox</string>
...
