...
            onWaistCircumference = onWaistCircumference,
        )
        Spacer(modifier = Modifier.height(16.dp))
        Button(
            onClick = onBuildProfile,
            modifier = Modifier.fillMaxWidth().semantics {
                testTag = "build_profile_button"
            },
            shape = MaterialTheme.shapes.medium,
            enabled = username.isUsernameValid() and age.isAgeValid()
                    and weight.isFloatAndGreaterThanZero() and height.isFloatAndGreaterThanZero()
                    and weightTarget.isFloatAndGreaterAndEqualToZero() and !isBuildProfileLoading,
        ) {
...
