...
                        contentPadding = PaddingValues(bottom = 8.dp, end = 16.dp),
                        verticalArrangement = Arrangement.Top,
                        horizontalAlignment = Alignment.CenterHorizontally,
                        modifier = Modifier
                            .fillMaxHeight()
                            .semantics {
                                testTag = "food_diary_list"
                            }
                    ) {
                        item {
                            Column {
                                AnimatedVisibility(visible = isDiaryLoading) {
                                    Column {
                                        repeat(8) {
                                            DiaryCardShimmer(
                                                modifier = Modifier.semantics {
                                                    testTag = "diary_card_shimmer"
                                                }
                                            )
                                        }
                                    }
                                }
                            }
...
