...
                    onClick = onRemove,
                    colors = IconButtonDefaults.filledIconButtonColors(
                        containerColor = Color.Black.copy(alpha = 0.5f)
                    ),
                    enabled = isRemoveEnable,
                    modifier = Modifier.semantics {
                        testTag = "delete_food_diary"
                    }
                ) {
                    Icon(
                        painter = painterResource(id = R.drawable.ic_outline_cancel_24dp),
                        contentDescription = null,
                        tint = Color.White,
...
